perf: 109 -> 17k messages/s, raw-body uploads, after-commit broadcast
The write path was capped at 109 messages/second. The cause was not any of the three
things scalability.md blamed (Lucene commits, WAL fsync, the broker): the STOMP inbound
channel had no explicit executor, so every @MessageMapping in the server ran on the
single-threaded heartbeat scheduler. Concurrency was literally one. The tell was in
numbers already collected — 109/s x 8.2ms handler time ~= 0.89 messages in flight — and a
virtual-thread-aware dump confirmed every sampled message was on the same thread.

Cumulative, each step measured (benchmark/results/*.json, method in scalability.md):

  109    baseline
  1,583  explicit inbound executor                        (14.5x, one config fix)
  3,598  drop ~7 redundant queries per message
  5,948  cache channel + write-access on the hot path
  13,638 batch the INSERTs (write-behind)
  17,066 indexing off the handler, broadcast after commit, flushers sharded

Fan-out measures ~136k deliveries/s into 50-member rooms with nothing dropped — the old
"~10k, the simple broker is the ceiling" conclusion was the starved inbound side, not the
broker.

Correctness moved with performance, not against it:

- A message is broadcast and indexed only after its row commits (Durability handle), so a
  failed INSERT can never become a message everyone saw and nobody has. Publishing on
  acceptance is a few ms faster and admits phantom messages; that is not a trade worth
  making in a chat system.
- Write-behind queues are sharded by channel, so per-channel ordering holds while different
  channels commit in parallel. A single flusher made its Postgres round trip the ceiling for
  the whole server (17k -> 8.7k) before sharding.
- The API now says which path is safe: post/postWithMentions are durable on return
  (attachments, polls and reminders insert rows referencing the message id); postBuffered is
  the WebSocket path only.
- ChannelAccessCache caches positive acces